@@ -263,7 +263,7 @@ E. Bugs/missing features:
 	- string drive caller: "<stmt1> <stmt2>" is accepted; <stmt2> is used (DONE)
 	- GetPosAbs/GetRotAbs dependent on other (pos, rot, ...) (use Get.*Rel(AbsRefFrame, ...) instead)
 	- print name of entities when present (DONE)
-	- call nodes/elements in the order of definition
+	- call nodes/elements in the order of definition (DONE)
 
 
 
